--- a/frontend/nixpacks.toml
+++ b/frontend/nixpacks.toml
@@ -1,8 +1,11 @@
 [phases.setup]
 nixPkgs = ["nodejs-18_x"]
 
+[phases.install]
+cmds = ["npm install"]
+
 [phases.build]
-cmds = ["npm install", "npm run build"]
+cmds = ["npm run build"]
 
 [start]
 cmd = "npm run start"
